# simple-a2a

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
agent_bus/: __init__.py  db.py  main.py  models.py  push_engine.py  store.py  stream_manager.py
agent_bus/admin/: admin.css  admin.js  index.html
diagrams/: e2e_test_cases.mmd
docs/: agent_implementation_guide.md  architecture.dot  architecture.md  architecture_v2.md  exploratory_qa.html  exploratory_qa.md  proposal_centralized_message_hub.md  sequence_group.md  sequence_human_confirm.md  sequence_p2p.md  sequence_self_discovery.md  testing_report.md
docs/images/: diagrams.html  generate_kroki.py  generate_via_kroki.py  retry_p2p.py  retry_self_discovery.py  sequence_p2p_clean.mmd  sequence_self_discovery_clean.mmd  test_kroki.py
examples/: claude_code_skill.md  client_demo.py  kimi_code_skill.md  openclaw_code_skill.md
tests/: test_e2e.py
