[project]
name = "agent-communicator"
version = "0.1.0"
description = "Agent 原生协作层 — 让 Coding Agent 拥有身份、广播、点对点、群组的通信能力"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "redis>=5.0.0",
    "requests>=2.33.1",
    "pymongo>=4.12.0",
    "uvicorn>=0.46.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyright]
include = ["agent_bus"]
exclude = ["agent_bus/store.py"]
